# resamplers

./: Cargo.toml  README.md
src/: main.rs  weights.rs
src/densities/: density.rs  gaussian.rs  mod.rs
src/resamplers/: mod.rs  multinomial.rs  resampler.rs  residual.rs  stratified.rs  systematic.rs  test.rs
