[package]
name = "resamplers"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: Check whether these disabled features are wanted. (maybe they have performance implications?) 
rand = { version = "0.9.2", default-features = false }
rand_distr = { version = "0.5.1", default-features = false }
rand_xoshiro = { version = "0.7.0", default-features = false }
